k8s/typescript/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typescript-app-service
spec:
  selector:
    app: typescript
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
