k8s/typescript/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-typescript-service
spec:
  selector:
    app: app-typescript
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
  type: NodePort
